--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,168 +1,115 @@
-.page {
-  --gray-rgb: 0, 0, 0;
-  --gray-alpha-200: rgba(var(--gray-rgb), 0.08);
-  --gray-alpha-100: rgba(var(--gray-rgb), 0.05);
-
-  --button-primary-hover: #383838;
-  --button-secondary-hover: #f2f2f2;
-
-  display: grid;
-  grid-template-rows: 20px 1fr 20px;
-  align-items: center;
-  justify-items: center;
-  min-height: 100svh;
-  padding: 80px;
-  gap: 64px;
-  font-family: var(--font-geist-sans);
-}
-
-@media (prefers-color-scheme: dark) {
-  .page {
-    --gray-rgb: 255, 255, 255;
-    --gray-alpha-200: rgba(var(--gray-rgb), 0.145);
-    --gray-alpha-100: rgba(var(--gray-rgb), 0.06);
-
-    --button-primary-hover: #ccc;
-    --button-secondary-hover: #1a1a1a;
-  }
-}
-
 .main {
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-  grid-row-start: 2;
+  width: 100%;
+  background-color: #FFF5E4;
+  padding-top: 20px;
 }
 
-.main ol {
-  font-family: var(--font-geist-mono);
-  padding-left: 0;
-  margin: 0;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: -0.01em;
-  list-style-position: inside;
+
+.shopBagWrap {
+  width: 100%;
+  height: 186px;
+  padding-top: 10px;
+  background-color: #F6FFF8;
+  border-radius: 25px;
+
 }
 
-.main li:not(:last-of-type) {
-  margin-bottom: 8px;
+.shopBagWrap h1 {
+  display: inline;
+  font-size: 24px;
+  color: #52C4E7;
+  padding-left: 20px;
 }
 
-.main code {
-  font-family: inherit;
-  background: var(--gray-alpha-100);
-  padding: 2px 4px;
-  border-radius: 4px;
-  font-weight: 600;
-}
-
-.ctas {
-  display: flex;
-  gap: 16px;
-}
-
-.ctas a {
-  appearance: none;
-  border-radius: 128px;
-  height: 48px;
-  padding: 0 20px;
-  border: none;
-  border: 1px solid transparent;
-  transition:
-    background 0.2s,
-    color 0.2s,
-    border-color 0.2s;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.shopBagWrap .date {
+  width: 82px;
+  height: 30px;
+  color: #414141;
+  margin-left: 65px;
+  border-radius: 8px;
+  border: 0.5px solid #D9D9D9;
+  background-color: #F6FFF8;
   font-size: 16px;
-  line-height: 20px;
-  font-weight: 500;
 }
 
-a.primary {
-  background: var(--foreground);
-  color: var(--background);
-  gap: 8px;
+.border {
+  display: block;
+  width: 100%;
+  height: 3px;
+  margin-top: 20px;
+  background: #42BCFD;
 }
 
-a.secondary {
-  border-color: var(--gray-alpha-200);
-  min-width: 158px;
-}
 
-.footer {
-  grid-row-start: 3;
+.boxWrap {
   display: flex;
-  gap: 24px;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+  padding: 0 5px;
+
 }
 
-.footer a {
+.box {
+  width: 70px;
+  height: 70px;
+  background: #ccc;
+}
+
+
+
+.shareBagWrap {
+  background-image: url('/images/food-bag.png');
+  background-size: contain;
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  margin-top: 20px;
+  padding-bottom: 50px;
+
+}
+
+.shareBagWrap h2 {
+  color: #52C4E7;
+  text-align: center;
+}
+
+
+.shareBag {
+  width: 240px;
+  height: 240px;
+  margin: 10px auto 0;
+  background-color: #FFFFFF;
+  border-radius: 40px;
+  box-shadow: 0.881px 2.644px 3.525px 0px rgba(0, 0, 0, 0.10);
+}
+
+.shareBagImage {
+  width: 200px;
+  height: auto;
+  margin-top: 10px;
+  margin-left: 19px;
+}
+
+.addButton {
+  width: 50px;
+  height: 50px;
   display: flex;
-  align-items: center;
-  gap: 8px;
+  justify-self: flex-end;
+  display: block;
+  margin-right: 15px;
+  border-radius: 50%;
+  background-color: #9DDCDC;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
-.footer img {
-  flex-shrink: 0;
+.addButton:hover {
+  transform: scale(1.05);
 }
 
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  a.primary:hover {
-    background: var(--button-primary-hover);
-    border-color: transparent;
-  }
-
-  a.secondary:hover {
-    background: var(--button-secondary-hover);
-    border-color: transparent;
-  }
-
-  .footer a:hover {
-    text-decoration: underline;
-    text-underline-offset: 4px;
-  }
-}
-
-@media (max-width: 600px) {
-  .page {
-    padding: 32px;
-    padding-bottom: 80px;
-  }
-
-  .main {
-    align-items: center;
-  }
-
-  .main ol {
-    text-align: center;
-  }
-
-  .ctas {
-    flex-direction: column;
-  }
-
-  .ctas a {
-    font-size: 14px;
-    height: 40px;
-    padding: 0 16px;
-  }
-
-  a.secondary {
-    min-width: auto;
-  }
-
-  .footer {
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .logo {
-    filter: invert();
-  }
+.icon {
+  margin: auto;
+  width: 22px;
+  height: 22px;
+  margin-top: 4px;
+  color: #FFFFFF;
 }
