--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,6 +2,7 @@
   width: 100%;
   background-color: #FFF5E4;
   padding-top: 20px;
+  position: relative;
 }
 
 
@@ -71,6 +72,8 @@
 .shareBagWrap h2 {
   color: #52C4E7;
   text-align: center;
+  font-size: 32px;
+  font-weight: bold;
 }
 
 
@@ -90,26 +93,61 @@
   margin-left: 19px;
 }
 
+.addButtonWrap {
+  position: absolute;
+  bottom: calc(30px + 16px);
+  right: 16px;
+
+}
+
 .addButton {
+  position: relative;
   width: 50px;
   height: 50px;
   display: flex;
-  justify-self: flex-end;
-  display: block;
-  margin-right: 15px;
+  align-items: center;
+  justify-content: center;
+  padding: 12px;
   border-radius: 50%;
   background-color: #9DDCDC;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
-.addButton:hover {
+/* .addButton:hover {
   transform: scale(1.05);
-}
+} */
 
 .icon {
   margin: auto;
-  width: 22px;
-  height: 22px;
-  margin-top: 4px;
+  width: 100%;
+  height: 100%;
   color: #FFFFFF;
+}
+
+.bagSelector {
+  position: absolute;
+  bottom: calc(100% + 8px);
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.bagSelectorItem {
+  width: 120px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  background: #fff;
+  border-radius: 4px;
+  padding: 6px;
+}
+
+.bagSelectorItemName {}
+
+.bagSelectorItemImage {
+  height: 100%;
+  width: fit-content;
+  object-fit: contain;
 }
