--- a/src/components/topHeader.module.css
+++ b/src/components/topHeader.module.css
@@ -1,6 +1,6 @@
 .header {
     width: 100%;
-    height: 80px;
+    height: 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -9,8 +9,8 @@
 }
 
 .logo {
-    height: 100%;
-    width: fit-content;
+    width: 150px;
+    height: auto;
 }
 
 .headerItem {
@@ -39,6 +39,7 @@
 }
 
 .icon {
-    height: 100%;
     color: #fff;
+    font-size: 30px;
+
 }
