--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -81,7 +81,7 @@
   width: 240px;
   height: 240px;
   margin: 10px auto 0;
-  background-color: #FFFFFF;
+  background-color: rgba(255, 255, 255, 0.40);
   border-radius: 40px;
   box-shadow: 0.881px 2.644px 3.525px 0px rgba(0, 0, 0, 0.10);
 }
