--- a/src/app/bag/page.module.css
+++ b/src/app/bag/page.module.css
@@ -2,6 +2,7 @@
 .main {
     width: 100%;
     background-color: #FFF5E4;
+    position: relative;
 }
 
 
@@ -12,6 +13,7 @@
     background-position: center center;
     background-repeat: no-repeat;
     margin-top: -20px;
+
 }
 
 .red {
@@ -24,4 +26,30 @@
 
 .green {
     background-image: url('/images/bag-background3.png');
+}
+
+.addButtonWrap {
+    position: absolute;
+    right: 20px;
+    bottom: 150px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.addButton {
+    width: 50px;
+    height: 50px;
+    padding: 12px;
+    border-radius: 50%;
+    border: 3px solid #9DDCDC;
+    background-color: #FFFFFF;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+.icon {
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    color: #9DDCDC;
 }
