--- a/src/app/bag/page.module.css
+++ b/src/app/bag/page.module.css
@@ -57,6 +57,100 @@
 .detailForm {
     width: 340px;
     height: 260px;
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 10px;
+    column-gap: 10px;
+    padding: 10px 0 0 10px;
+    background: #FDFDFD;
     border: 1px solid #E8E8E8;
     border-radius: 10px;
+}
+
+.label {
+    color: #5690B2;
+    font-weight: bold;
+}
+
+.formRow {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.input {
+    width: 240px;
+    height: 30px;
+    border: 1px solid #D8D8D8;
+    border-radius: 6px;
+}
+
+.detailForm>div:nth-child(3) .input {
+    width: 40px;
+}
+
+.quantityWrap {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+
+
+.qtyBtn {
+    width: 26px;
+    height: 26px;
+    border: 1px solid #D8D8D8;
+    border-radius: 6px;
+
+}
+
+.qtyValue {
+    text-align: center;
+    width: 26px;
+    height: 26px;
+    border: 1px solid #D8D8D8;
+    border-radius: 6px;
+    color: #797979;
+
+}
+
+.imgBtn {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 1.2rem;
+    color: #5690B2;
+}
+
+.select {
+    width: 140px;
+    height: 26px;
+    border: 1px solid #D8D8D8;
+    border-radius: 6px;
+    color: #797979;
+}
+
+
+.stampWrap {
+    display: flex;
+    gap: 10px;
+
+}
+
+.stampItem {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #47C4FE;
+
+}
+
+.stampItem p {
+    font-size: 12px;
+}
+
+
+.stampImg {
+    width: 28px;
+    height: 28px;
 }
