--- a/src/app/bag/page.module.css
+++ b/src/app/bag/page.module.css
@@ -16,6 +16,7 @@
 
 }
 
+
 .red {
     background-image: url('/images/bag-background.png');
 }
@@ -28,7 +29,7 @@
     background-image: url('/images/bag-background3.png');
 }
 
-.addButtonWrap {
+.modalBtnWrap {
     position: absolute;
     right: 20px;
     bottom: 150px;
@@ -37,120 +38,58 @@
     gap: 15px;
 }
 
-.addButton {
-    width: 50px;
-    height: 50px;
-    padding: 12px;
-    border-radius: 50%;
-    border: 3px solid #9DDCDC;
-    background-color: #FFFFFF;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+.stdListBtnWrap {
+    display: flex;
+    justify-content: end;
 }
 
-.icon {
-    margin: auto;
-    width: 100%;
-    height: 100%;
-    color: #9DDCDC;
-}
 
-.detailForm {
-    width: 340px;
-    height: 260px;
-    display: grid;
-    grid-template-columns: 1fr;
-    row-gap: 10px;
-    column-gap: 10px;
-    padding: 10px 0 0 10px;
-    background: #FDFDFD;
-    border: 1px solid #E8E8E8;
-    border-radius: 10px;
-}
-
-.label {
-    color: #5690B2;
+.stdListBtn {
+    width: 100px;
+    height: 38px;
+    background-color: #67DBD9;
+    border-radius: 6px;
+    box-shadow: 1px 2px 0px 0px #58B7B5;
+    font-size: 14px;
+    color: #FFFFFF;
     font-weight: bold;
 }
 
-.formRow {
+
+.detailFormActions {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 10px 0px 0 20px;
+}
+
+.defaultItemWrap {
     display: flex;
     align-items: center;
-    gap: 15px;
-}
-
-.input {
-    width: 240px;
-    height: 30px;
-    border: 1px solid #D8D8D8;
-    border-radius: 6px;
-}
-
-.detailForm>div:nth-child(3) .input {
-    width: 40px;
-}
-
-.quantityWrap {
-    display: flex;
-    align-items: center;
-    gap: 6px;
-}
-
-
-.qtyBtn {
-    width: 26px;
-    height: 26px;
-    border: 1px solid #D8D8D8;
-    border-radius: 6px;
-
-}
-
-.qtyValue {
-    text-align: center;
-    width: 26px;
-    height: 26px;
-    border: 1px solid #D8D8D8;
-    border-radius: 6px;
-    color: #797979;
-
-}
-
-.imgBtn {
-    background: none;
-    border: none;
-    cursor: pointer;
-    font-size: 1.2rem;
-    color: #5690B2;
-}
-
-.select {
-    width: 140px;
-    height: 26px;
-    border: 1px solid #D8D8D8;
-    border-radius: 6px;
-    color: #797979;
-}
-
-
-.stampWrap {
-    display: flex;
     gap: 10px;
-
 }
 
-.stampItem {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: #47C4FE;
-
+.checkbox {
+    width: 26px;
+    height: 26px;
+    border-radius: 4px;
+    border-color: #d64646;
 }
 
-.stampItem p {
+.defaultItemText {
     font-size: 12px;
+    font-weight: bold;
+    color: #5690B2;
+    line-height: 15px;
 }
 
-
-.stampImg {
-    width: 28px;
-    height: 28px;
+.listAddBtn {
+    width: 100px;
+    height: 38px;
+    background-color: #67DBD9;
+    border-radius: 6px;
+    box-shadow: 1px 2px 0px 0px #58B7B5;
+    font-size: 14px;
+    color: #FFFFFF;
+    font-weight: bold;
 }
