--- a/src/components/modal.module.css
+++ b/src/components/modal.module.css
@@ -25,8 +25,6 @@
 }
 
 
-
-
 .modalStyle {
     position: fixed;
     bottom: 0;
@@ -41,17 +39,18 @@
     transform: translateY(100%);
     transition: transform 0.1s ease-out;
     z-index: 10;
+}
 
-    button {
-        color: #5690B2;
-    }
+.backBtn {
+    color: #5690B2;
+    font-weight: bold;
+}
 
-    .modalTitle {
-        display: inline;
-        text-align: center;
-        color: #5690B2;
-        padding-left: 90px;
-    }
+.modalTitle {
+    display: inline;
+    text-align: center;
+    color: #5690B2;
+    padding-left: 90px;
 }
 
 .modalOpen {
