--- a/src/app/camera/page.module.css
+++ b/src/app/camera/page.module.css
@@ -1,21 +1,13 @@
 .main {
     width: 100%;
     background-color: #FFF5E4;
+
 }
 
-.camera {
-    width: 340px;
-    height: 300px;
-    margin: 20px auto;
-    background-color: tomato;
-}
 
-.bagList {
-    width: 360px;
-    height: 100%;
-    margin: 0 auto;
-    background-image: url('/images/bag-cameralist.png');
-    background-size: contain;
-    background-position: center top;
-    background-repeat: no-repeat;
+.container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 20px;
 }
