--- a/src/app/bag/page.module.css
+++ b/src/app/bag/page.module.css
@@ -26,12 +26,6 @@
     background-image: url('/images/bag-background3.png');
 }
 
-.checkList {
-    width: 20px;
-    height: 20px;
-    border-color: #247D9D;
-}
-
 .savedList {
     padding-top: 120px;
     padding-left: 30px;
@@ -40,9 +34,30 @@
 }
 
 .savedItem {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     padding-top: 20px;
+    padding-right: 20px;
     border-bottom: 1px solid #247D9D;
 }
+
+.checkList {
+    width: 16px;
+    height: 16px;
+    margin-right: 5px;
+    border: 1px solid #fd1616;
+    border-radius: 20px;
+    margin-right: 8px;
+    background-color: #88bbff;
+}
+
+.deleteBtn {
+    color: #F67F7F;
+    padding: 0 3px;
+}
+
+
 
 .modalBtnWrap {
     position: absolute;
@@ -52,6 +67,39 @@
     flex-direction: column;
     gap: 15px;
 }
+
+
+.stdList {
+    width: 340px;
+    height: 260px;
+    background-color: #FFFDF2;
+    border: 1px solid #E8E8E8;
+    border-radius: 10px;
+}
+
+.stdCategory {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 5px 0 0;
+}
+
+.stdCategory button:nth-child(1) {
+    color: #52C4E7;
+    border-bottom: 1px solid #52C4E7;
+}
+
+
+
+.stdItem {
+    width: auto;
+    height: 40px;
+    padding: 0 12px;
+    border-radius: 6px;
+    background-color: #FDFDFD;
+    box-shadow: 0px 1px 0px 0px #D0D0D0;
+    margin: 0 2px;
+}
+
 
 .stdListBtnWrap {
     display: flex;
@@ -68,6 +116,7 @@
     color: #FFFFFF;
     font-weight: bold;
 }
+
 
 .detailFormActions {
     display: flex;
@@ -105,4 +154,8 @@
     font-size: 14px;
     color: #FFFFFF;
     font-weight: bold;
+}
+
+.listAddBtn:hover {
+    background-color: #53bab9;
 }
