--- a/src/components/detailForm.module.css
+++ b/src/components/detailForm.module.css
@@ -7,7 +7,7 @@
     row-gap: 10px;
     column-gap: 10px;
     padding: 10px 0 0 10px;
-    background: #FDFDFD;
+    background-color: #FDFDFD;
     border: 1px solid #E8E8E8;
     border-radius: 10px;
 }
