--- a/src/components/objectDetection.module.css
+++ b/src/components/objectDetection.module.css
@@ -31,6 +31,7 @@
 
 .deleteBtn {
     color: #F67F7F;
+    padding: 0 3px;
 }
 
 .listAddBtn {
@@ -45,4 +46,8 @@
     border-radius: 6px;
     box-shadow: 1px 2px 0px 0px #58B7B5;
     font-weight: bold;
+}
+
+.listAddBtn:hover {
+    background-color: #53bab9;
 }
