--- a/src/app/chat/page.module.css
+++ b/src/app/chat/page.module.css
@@ -3,14 +3,48 @@
     background-color: #FFF5E4;
 }
 
+.partner {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    margin: 10px 5px;
+}
+
+.user {
+    width: 30px;
+    height: 30px;
+    color: #747474;
+    border: 4px solid #747474;
+    border-radius: 50%;
+    padding: 5px;
+}
+
+.partner p {
+    padding: 8px 8px;
+    border-radius: 6px;
+    background-color: #FDFDFD;
+}
+
+.myself {
+
+    width: fit-content;
+    margin: 10px 5px 0 auto;
+    padding: 8px 8px;
+    border-radius: 6px;
+    background-color: #D7FCFF;
+}
+
 .footer {
+    width: 100%;
     height: 100px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
     background-color: #E9FDFF;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 10px;
-
 }
 
 .textarea {
