--- a/src/app/chat/page.module.css
+++ b/src/app/chat/page.module.css
@@ -11,8 +11,8 @@
 }
 
 .user {
-    width: 30px;
-    height: 30px;
+    width: 26px;
+    height: 26px;
     color: #747474;
     border: 4px solid #747474;
     border-radius: 50%;
@@ -51,6 +51,7 @@
     width: 260px;
     height: 40px;
     border-radius: 10px;
+    margin-bottom: 15px;
     padding-left: 10px;
     font-size: 14px;
     background-color: #FDFDFD;
@@ -59,6 +60,7 @@
 .iconWrap {
     width: 26px;
     height: 22px;
+    margin-bottom: 15px;
 }
 
 .icon {
