--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -24,15 +24,17 @@
   padding-left: 20px;
 }
 
-.shopBagWrap .date {
-  width: 82px;
-  height: 30px;
+.shopBagWrap p {
   color: #414141;
-  margin-left: 65px;
-  border-radius: 8px;
-  border: 0.5px solid #D9D9D9;
-  background-color: #F6FFF8;
-  font-size: 16px;
+  font-size: 18px;
+  margin-right: 26px;
+}
+
+.text {
+  display: flex;
+  align-items: end;
+  justify-content: space-between;
+
 }
 
 .border {
@@ -73,7 +75,7 @@
 .shareBagWrap h2 {
   color: #52C4E7;
   text-align: center;
-  font-size: 32px;
+  font-size: 30px;
   font-weight: bold;
 }
 
