--- a/src/app/bag/page.module.css
+++ b/src/app/bag/page.module.css
@@ -80,14 +80,23 @@
 .stdCategory {
     display: flex;
     justify-content: space-evenly;
-    padding: 5px 0 0;
+    padding-top: 5px;
 }
 
-.stdCategory button:nth-child(1) {
+.tab {
+    background: none;
+    border: none;
+    padding: 4px 8px;
+    color: #666;
+    border-bottom: 1px solid transparent;
+    cursor: pointer;
+    transition: color .2s, border-color .2s;
+}
+
+.active {
     color: #52C4E7;
     border-bottom: 1px solid #52C4E7;
 }
-
 
 
 .stdItem {
