--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -24,18 +24,13 @@
   padding-left: 20px;
 }
 
-.shopBagWrap p {
-  color: #414141;
-  font-size: 18px;
-  margin-right: 26px;
-}
-
 .text {
   display: flex;
   align-items: end;
   justify-content: space-between;
-
 }
+
+
 
 .border {
   display: block;
@@ -49,15 +44,20 @@
 .bagWrap {
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
   gap: 1rem;
   padding: 0 5px;
-
 }
 
 .bag {
   width: 80px;
   height: 90px;
+}
+
+.date {
+  display: flex;
+  justify-content: space-around;
+  font-size: 14px;
+  margin-top: -8px;
 }
 
 
