--- a/src/app/bag/page.module.css
+++ b/src/app/bag/page.module.css
@@ -106,7 +106,20 @@
     border-radius: 6px;
     background-color: #FDFDFD;
     box-shadow: 0px 1px 0px 0px #D0D0D0;
-    margin: 0 2px;
+    margin: 6px 8px;
+    position: relative;
+    overflow: visible;
+}
+
+.stdStamp {
+    position: absolute;
+    /* スタンプのサイズが16pxなので半分の8pxをマイナスオフセット＝半分だけ重なる */
+    top: -8px;
+    right: -8px;
+    width: 20px;
+    height: 20px;
+    pointer-events: none;
+    /* スタンプがクリックを邪魔しないように */
 }
 
 
@@ -118,6 +131,7 @@
 .stdListBtn {
     width: 100px;
     height: 38px;
+    margin-top: 10px;
     background-color: #67DBD9;
     border-radius: 6px;
     box-shadow: 1px 2px 0px 0px #58B7B5;
