--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -30,6 +30,11 @@
   justify-content: space-between;
 }
 
+.text p {
+  margin-right: 26px;
+  color: #4D4D4D;
+}
+
 
 
 .border {
@@ -58,6 +63,7 @@
   justify-content: space-around;
   font-size: 14px;
   margin-top: -8px;
+  color: #4D4D4D;
 }
 
 
